--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "node": "^23.8.0",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^17.7.0",
     "validator": "^13.12.0"
   }
 }
