--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^17.7.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
