--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
