--- a/Frontend/vite-project/package.json
+++ b/Frontend/vite-project/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.1",
+    "axios": "^1.8.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
